--- a/code/template.ipynb
+++ b/code/template.ipynb
@@ -33,13 +33,13 @@
     "# custom\n",
     "import known\n",
     "\n",
-    "print(f'{sys.version=}\\n{np.__version__=}\\n{tt.__version__=}')"
+    "print(f'{sys.version=}\\n{np.__version__=}\\n{tt.__version__=}\\n{known.__version__=}')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "__venv__",
+   "display_name": "__venv310__",
    "language": "python",
    "name": "python3"
   },
@@ -53,12 +53,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3431cd6908bfbce613846807ea6f75b1488665461b32b02c85001728b281bc28"
+    "hash": "8fe6015140738806d41bf643a20b25ab509e1558f046cb4d7778c2b8bb5aa7b5"
    }
   }
  },
