--- a/code/template.ipynb
+++ b/code/template.ipynb
@@ -32,6 +32,7 @@
     "\n",
     "# custom\n",
     "import known\n",
+    "import known.ktorch as kt\n",
     "\n",
     "print(f'{sys.version=}\\n{np.__version__=}\\n{tt.__version__=}\\n{known.__version__=}')"
    ]
