--- a/code/RNNs/bench_mark_RNNS.ipynb
+++ b/code/RNNs/bench_mark_RNNS.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,7 +33,7 @@
     "# custom\n",
     "import known\n",
     "import known.ktorch as kt\n",
-    "\n",
+    "from known.basic import pj\n",
     "print(f'{sys.version=}\\n{np.__version__=}\\n{tt.__version__=}\\n{known.__version__=}')"
    ]
   },
@@ -44,36 +43,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen(rng, n, d):\n",
-    "    x=np.linspace(0, 10*np.pi, n)\n",
-    "    if d==0:\n",
-    "        y = 10*np.sin(x)\n",
-    "    elif d==1:\n",
-    "        y = -5*np.cos(x)\n",
-    "    elif d==2:\n",
-    "        y = 7*np.sin(x) + -9*np.cos(x)\n",
-    "    else:\n",
-    "        print('invalid dim')\n",
-    "    return y\n",
-    "\n",
-    "kt.SeqDataset.generate(\n",
-    "    genF=gen,\n",
-    "    genS=1000,\n",
-    "    colS=['a', 'b', 'c'], normalize=False, file_name='train.csv'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seqlen = 24\n",
-    "cols = ('PRICE',)\n",
+    "seqlen = 20\n",
+    "cols = ('1','2', '3')\n",
     "input_size = len(cols)\n",
-    "ds = kt.SeqDataset.from_csv('PJDS.csv', cols=cols, seqlen=seqlen, reverse=True, normalize=False, squeeze_label=True, dtype=tt.float32)\n",
-    "ds"
+    "ds  = kt.SeqDataset.from_csv(pj('data_rnn/sinu.csv'), cols=cols, \n",
+    "                seqlen=seqlen, reverse=True, normalize=False, squeeze_label=True, dtype=tt.float32)\n",
+    "ds_train = kt.SeqDataset.from_csv(pj('data_rnn/sinu_train.csv'), cols=cols, \n",
+    "                seqlen=seqlen, reverse=True, normalize=False, squeeze_label=True, dtype=tt.float32)\n",
+    "ds_val = kt.SeqDataset.from_csv(pj('data_rnn/sinu_test.csv'), cols=cols, \n",
+    "                seqlen=seqlen, reverse=True, normalize=False, squeeze_label=True, dtype=tt.float32)\n",
+    "ds_test = ds\n",
+    "ds, ds_train, ds_val, ds_test"
    ]
   },
   {
@@ -82,12 +62,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hidden_size = 32\n",
+    "num_layers = 3\n",
     "class RnnMlp(nn.Module):\n",
+    "\n",
     "    def __init__(self, rnn_class) -> None:\n",
     "        super().__init__()\n",
     "        self.rnn_class = rnn_class\n",
     "        rnnargs = dict(\n",
-    "            input_size=input_size, hidden_sizes=(8, 8, 8), actF=tt.tanh, batch_first=True, dtype=tt.float32\n",
+    "            input_size=input_size, hidden_sizes=[hidden_size for _ in range(num_layers)], actF=tt.tanh, \n",
+    "            batch_first=True, dtype=tt.float32, stack_output=True\n",
     "        )\n",
     "        if rnn_class is kt.ELMAN or rnn_class is kt.GRU or rnn_class is kt.MGU: \n",
     "            self.rnn = rnn_class(True, False, **rnnargs)\n",
@@ -98,12 +82,13 @@
     "            rnnargs['actC']=tt.tanh\n",
     "            self.rnn = rnn_class(True, False, **rnnargs)\n",
     "        elif rnn_class is nn.RNN or rnn_class is nn.GRU or rnn_class is nn.LSTM:\n",
-    "            self.rnn = rnn_class(input_size=input_size, hidden_size=8, num_layers=3, batch_first=True)\n",
+    "            self.rnn = rnn_class(input_size=input_size, hidden_size=hidden_size, num_layers=num_layers, \n",
+    "                                 batch_first=True)\n",
     "        else:\n",
     "            print('Invalid_RNN_Class')\n",
     "            \n",
     "        \n",
-    "        self.fc = nn.Sequential( nn.Flatten(), nn.Linear(8, input_size))\n",
+    "        self.fc = nn.Sequential( nn.Flatten(), nn.Linear(hidden_size, input_size))\n",
     "        #self.fc = nn.Flatten()\n",
     "\n",
     "    def forward(self, X):\n",
@@ -123,13 +108,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "dl = ds.dataloader(batch_size=32)\n",
     "print(len(dl))\n",
     "dli = iter(dl)\n",
     "x,y = next(dli)\n",
     "with tt.no_grad():\n",
     "    h = rnms[0](x)\n",
-    "x.shape, y.shape, h.shape"
+    "x.shape, y.shape, h.shape\n",
+    "\"\"\""
    ]
   },
   {
@@ -138,47 +125,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_history={}\n",
-    "for rnm in rnms:\n",
-    "    print(rnm.rnn_class)\n",
-    "    history = kt.utils.train( rnm,\n",
-    "        training_data=ds, \n",
-    "        validation_data=ds, \n",
-    "        testing_data=ds,\n",
-    "        epochs=500, \n",
-    "        batch_size=32, \n",
-    "        shuffle=True, \n",
-    "        validation_freq=5, \n",
-    "        criterion_type=nn.MSELoss, \n",
-    "        criterion_args={}, \n",
-    "        optimizer_type=oo.Adam, \n",
-    "        optimizer_args={'lr': 0.005, 'weight_decay': 0.0}, \n",
-    "        lrs_type=oo.lr_scheduler.LinearLR, \n",
-    "        lrs_args={'start_factor': 1.0, 'end_factor':0.7, 'total_iters': 2000},\n",
-    "        record_batch_loss=False, \n",
-    "        early_stop_train=None,#kt.QuantiyMonitor('TrainLoss', patience=50, delta=0.00001, verbose=False), \n",
-    "        early_stop_val=None, #kt.QuantiyMonitor('ValLoss', patience=50, delta=0.00001, verbose=False), \n",
-    "        checkpoint_freq=5, \n",
-    "        save_path='sample.rnn',\n",
-    "        save_state_only=True, \n",
-    "        verbose=1, \n",
-    "        plot=1\n",
-    "    )\n",
-    "    all_history[f'{rnm.rnn_class}'] = history\n",
-    "    print('=================================================')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_history={}\n",
+    "test_loss={}\n",
     "for rnm in rnms:\n",
     "    print(rnm.rnn_class)\n",
     "    model=rnm\n",
-    "    epochs = 50\n",
+    "    epochs = 500\n",
     "    batch_size=32\n",
     "    shuffle=True\n",
     "    validation_freq = int(epochs/10)\n",
@@ -194,15 +145,19 @@
     "    save_path='sample.rnn'\n",
     "    loss_plot_start = int(epochs/50)\n",
     "\n",
-    "    history = kt.utils.train_( \n",
-    "        model=model, \n",
-    "        training_data=ds, validation_data=ds, testing_data=ds,\n",
-    "            epochs=epochs, batch_size=batch_size, shuffle=shuffle, validation_freq=validation_freq, \n",
-    "            criterion=criterion, optimizer=optimizer, lrs=lrs,\n",
-    "            record_batch_loss=False, early_stop_train=early_stop_train, early_stop_val=early_stop_val, checkpoint_freq=checkpoint_freq, \n",
-    "            save_path=None, save_state_only=False, verbose=1, plot=1, loss_plot_start=loss_plot_start)\n",
+    "    trainer = kt.Trainer(model)\n",
+    "    trainer.optimizer=optimizer\n",
+    "    trainer.criterion=criterion\n",
     "\n",
-    "    all_history[f'{rnm.rnn_class}'] = history\n",
+    "    trainer.fit(training_data=ds_train, validation_data=ds_val, \n",
+    "                epochs=epochs, batch_size=batch_size,shuffle=shuffle,validation_freq=validation_freq,\n",
+    "                verbose=1)\n",
+    "\n",
+    "    trainer.plot_results(loss_plot_start=loss_plot_start)\n",
+    "\n",
+    "    mtl, tl = trainer.evaluate(ds_test)\n",
+    "\n",
+    "    test_loss[str(rnm.rnn_class)] = mtl\n",
     "    print('=================================================')"
    ]
   },
@@ -214,14 +169,13 @@
    "source": [
     "y = []\n",
     "l = []\n",
-    "for k,v in all_history.items():\n",
-    "    ll, vl, tl = v['loss'][-1], v['val_loss'][-1], v['test_loss']\n",
-    "    print(f'{k}:\\t{ll, vl, tl}')\n",
-    "    y.append(v[1])\n",
+    "for k,v in test_loss.items():\n",
+    "    print(f'{k}:\\t{v}')\n",
+    "    y.append(v)\n",
     "    sl = k.split('.')\n",
     "    l.append(sl[1]+\".\"+sl[-1][:-2])\n",
     "\n",
-    "x= range(len(all_history))\n",
+    "x= range(len(test_loss))\n",
     "\n",
     "plt.figure(figsize=(15,6))\n",
     "plt.bar(x , y )\n",
@@ -259,11 +213,19 @@
     "    \n",
     "    plt.plot(Yv[:,i], color='black', label='Truth')\n",
     "    for r,rnm,c in zip(res,rnms,rnmc):\n",
-    "        plt.plot(Pv[:,i], color=c, label=f'{rnm.rnn_class}', linestyle='dotted')\n",
+    "        plt.plot(r[:,i], color=c, label=f'{rnm.rnn_class}', linewidth=0.5)\n",
     "    plt.legend()\n",
     "    plt.show()\n",
     "    plt.close()\n",
     "    print('=================================================')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## future predict"
    ]
   },
   {
@@ -272,11 +234,49 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = []\n",
+    "for rnm in rnms:\n",
+    "    print(rnm.rnn_class)\n",
+    "    rnm.eval()\n",
+    "    dl=ds.dataloader(batch_size=1, shuffle=False)\n",
+    "    di = iter(dl)\n",
+    "    with tt.no_grad():\n",
+    "        Xv,Yv = next(di)\n",
+    "        Pv = rnm.rnn(Xv, future=1000)\n",
+    "        res.append(Pv)#print(Xv.shape, Yv.shape, Pv.shape)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(input_size):\n",
+    "    plt.figure(figsize=(20,10))\n",
+    "    plt.title(f'{i}')\n",
+    "    \n",
+    "    plt.plot(Yv[:,i], color='black', label='Truth')\n",
+    "    for r,rnm,c in zip(res,rnms,rnmc):\n",
+    "        plt.plot(r[:,i], color=c, label=f'{rnm.rnn_class}', linewidth=0.5)\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "    plt.close()\n",
+    "    print('=================================================')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "__venv310__",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -290,9 +290,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "8fe6015140738806d41bf643a20b25ab509e1558f046cb4d7778c2b8bb5aa7b5"
@@ -300,5 +299,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
