--- a/code/RNN_COMPAR_ELMAN.ipynb
+++ b/code/RNN_COMPAR_ELMAN.ipynb
@@ -281,7 +281,10 @@
      "text": [
       "(0.0, 0.0)\n",
       "(1.2351231148954867e-15, 1.2351231148954867e-15)\n",
-      "(1.2351231148954867e-15, 1.2351231148954867e-15)\n"
+      "(1.2351231148954867e-15, 1.2351231148954867e-15)\n",
+      "(1.2351231148954867e-15, 1.2351231148954867e-15)\n",
+      "(1.2351231148954867e-15, 1.2351231148954867e-15)\n",
+      "(0.0, 0.0)\n"
      ]
     }
    ],
@@ -294,7 +297,10 @@
     "\n",
     "    print(absdiff(y0, yt))\n",
     "    print(absdiff(y1, yt))\n",
-    "    print(absdiff(y2, yt))\n"
+    "    print(absdiff(y2, yt))\n",
+    "    print(absdiff(y0, y1))\n",
+    "    print(absdiff(y0, y2))\n",
+    "    print(absdiff(y2, y1))\n"
    ]
   }
  ],
