--- a/code/RNN_COMPAR_GRU.ipynb
+++ b/code/RNN_COMPAR_GRU.ipynb
@@ -318,7 +318,10 @@
      "text": [
       "(1.3739009929736312e-15, 1.3739009929736312e-15)\n",
       "(8.49692877819104, 8.49692877819104)\n",
-      "(8.49692877819104, 8.49692877819104)\n"
+      "(8.49692877819104, 8.49692877819104)\n",
+      "(8.49692877819104, 8.49692877819104)\n",
+      "(8.49692877819104, 8.49692877819104)\n",
+      "(0.0, 0.0)\n"
      ]
     }
    ],
@@ -331,7 +334,10 @@
     "\n",
     "    print(absdiff(y0, yt))\n",
     "    print(absdiff(y1, yt))\n",
-    "    print(absdiff(y2, yt))\n"
+    "    print(absdiff(y2, yt))\n",
+    "    print(absdiff(y0, y1))\n",
+    "    print(absdiff(y0, y2))\n",
+    "    print(absdiff(y2, y1))"
    ]
   }
  ],
