--- a/code/RNN_COMPAR_LSTM.ipynb
+++ b/code/RNN_COMPAR_LSTM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "50"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,10 @@
      "text": [
       "(3.469446951953614e-16, 3.469446951953614e-16)\n",
       "(4.85722573273506e-16, 4.85722573273506e-16)\n",
-      "(4.85722573273506e-16, 4.85722573273506e-16)\n"
+      "(4.85722573273506e-16, 4.85722573273506e-16)\n",
+      "(4.718447854656915e-16, 4.718447854656915e-16)\n",
+      "(4.718447854656915e-16, 4.718447854656915e-16)\n",
+      "(0.0, 0.0)\n"
      ]
     }
    ],
@@ -344,7 +347,10 @@
     "\n",
     "    print(absdiff(y0, yt))\n",
     "    print(absdiff(y1, yt))\n",
-    "    print(absdiff(y2, yt))\n"
+    "    print(absdiff(y2, yt))\n",
+    "    print(absdiff(y0, y1))\n",
+    "    print(absdiff(y0, y2))\n",
+    "    print(absdiff(y2, y1))"
    ]
   }
  ],
