--- a/code/RNNs/data_rnn/data_gen_RNNS.ipynb
+++ b/code/RNNs/data_rnn/data_gen_RNNS.ipynb
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sys.version='3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]'\n",
-      "np.__version__='1.24.1'\n",
-      "tt.__version__='1.13.1+cpu'\n",
+      "sys.version='3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]'\n",
+      "np.__version__='1.22.2'\n",
+      "tt.__version__='1.10.1+cu102'\n",
       "known.__version__='0.0.1'\n"
      ]
     }
@@ -59,9 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200, (0.7, 0.3), [(0, 140, 140), (140, 200, 60)], 200)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "n=200\n",
     "def gen(rng, d):\n",
@@ -79,12 +90,11 @@
     "kt.SeqDataset.generateS(\n",
     "    genF=gen,\n",
     "    colS=[ str(i+1) for i in range(3) ], \n",
-    "    file_name='sinu.csv',\n",
+    "    csv='sinu.csv',\n",
     "    normalize=False,\n",
     "    seed=None,\n",
     "    splits=(0.7, 0.3), \n",
     "    split_names=('train', 'test'), \n",
-    "    verbose=0\n",
     ")\n"
    ]
   },
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +117,7 @@
        "(500, (0.7, 0.3), [(0, 350, 350), (350, 500, 150)], 500)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,19 +134,56 @@
     "kt.SeqDataset.generateS(\n",
     "    genF=gen,\n",
     "    colS=[ str(i+1) for i in range(len(pfiles)) ], \n",
-    "    file_name='g.csv',\n",
+    "    csv='g.csv',\n",
     "    normalize=False,\n",
     "    seed=None,\n",
     "    splits=(0.7, 0.3), \n",
     "    split_names=('train', 'test'), \n",
-    "    verbose=0\n",
+    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(500, (0.7, 0.3), [(0, 350, 350), (350, 500, 150)], 500)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pfiles = ['h1.png', 'h2.png']\n",
+    "px='mid' #for px in [ 'first', 'last', 'mid', 'mean' ]:\n",
+    "p_scale=0.5\n",
+    "p_bias=5\n",
+    "def gen(rng, d):\n",
+    "    y = known.basic.graphfromimage(pfiles[d], pixel_choice=px)*p_scale + p_bias\n",
+    "    return y\n",
+    "\n",
+    "kt.SeqDataset.generateS(\n",
+    "    genF=gen,\n",
+    "    colS=[ str(i+1) for i in range(len(pfiles)) ], \n",
+    "    csv='h.csv',\n",
+    "    normalize=False,\n",
+    "    seed=None,\n",
+    "    splits=(0.7, 0.3), \n",
+    "    split_names=('train', 'test'), \n",
+    "\n",
     ")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "__venv310__",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -150,12 +197,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8fe6015140738806d41bf643a20b25ab509e1558f046cb4d7778c2b8bb5aa7b5"
+    "hash": "570feb405e2e27c949193ac68f46852414290d515b0ba6e5d90d076ed2284471"
    }
   }
  },
