--- a/code/TOOLS.ipynb
+++ b/code/TOOLS.ipynb
@@ -10,39 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(dict.__init__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict([[1,2],[2,2],[4,3]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = {}\n",
-    "help(type(d))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch as tt"
+    "import torch as tt\n",
+    "from torch.utils.data import DataLoader, Dataset"
    ]
   },
   {
@@ -51,204 +24,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(tensor([[34],\n",
-       "         [13]]),\n",
-       " tensor([[41],\n",
-       "         [ 6],\n",
-       "         [ 8]]))"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.version='3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]'\n",
+      "np.__version__='1.22.2'\n",
+      "tt.__version__='1.10.1+cu102'\n",
+      "known.__version__='0.0.1'\n"
+     ]
     }
    ],
-   "source": [
-    "i, h =2, 3\n",
-    "\n",
-    "X = tt.randint(low=1, high=50, size=(i,1))\n",
-    "H = tt.randint(low=1, high=50, size=(h,1))\n",
-    "X,H"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "w_ir = tt.randint(low=1, high=50, size=(h,i))\n",
-    "b_ir = tt.randint(low=1, high=50, size=(h,1))\n",
-    "\n",
-    "w_hr = tt.randint(low=1, high=50, size=(h,h))\n",
-    "b_hr = tt.randint(low=1, high=50, size=(h,1))\n",
-    "\n",
-    "w_in = tt.randint(low=1, high=50, size=(h,i))\n",
-    "b_in = tt.randint(low=1, high=50, size=(h,1))\n",
-    "\n",
-    "w_hn = tt.randint(low=1, high=50, size=(h,h))\n",
-    "b_hn = tt.randint(low=1, high=50, size=(h,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[3231602],\n",
-       "         [5626635],\n",
-       "         [3606169]]),\n",
-       " tensor([[3111842],\n",
-       "         [5538409],\n",
-       "         [3577513]]),\n",
-       " tensor([[119760],\n",
-       "         [ 88226],\n",
-       "         [ 28656]]))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Rt = (tt.mm(w_ir, X) + b_ir) + (tt.mm(w_hr, H) + b_hr) \n",
-    "assert(Rt.shape == H.shape)\n",
-    "Nt1 = (tt.mm(w_in, X) + b_in) + ((tt.mm(w_hn, H) + b_hn) * Rt)\n",
-    "Nt2 = (tt.mm(w_in, X) + b_in) + (tt.mm(w_hn*Rt, H) + b_hn)\n",
-    "Nt1, Nt2, Nt1-Nt2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[3081890],\n",
-       "         [5456688],\n",
-       "         [3569643]]),\n",
-       " tensor([[3081890],\n",
-       "         [5456688],\n",
-       "         [3569643]]),\n",
-       " tensor([[0],\n",
-       "         [0],\n",
-       "         [0]]))"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Rt = (tt.mm(w_ir, X) + b_ir) + (tt.mm(w_hr, H)) \n",
-    "assert(Rt.shape == H.shape)\n",
-    "Nt1 = (tt.mm(w_in, X) + b_in) + ((tt.mm(w_hn, H)) * Rt)\n",
-    "Nt2 = (tt.mm(w_in, X) + b_in) + (tt.mm(w_hn*Rt, H))\n",
-    "Nt1, Nt2, Nt1-Nt2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = tt.as_tensor([[[1, 3, 7, 6], [9, 0, 6, 2], [3, 0, 5, 8]], [[1, 0, 1, 0], [2, 1, 0, 3], [0, 0, 6, 1]]])\n",
-    "a.shape, a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b=tt.argsort(a[:,:,2])\n",
-    "b.shape, b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "sorted_a = a[:,[b[:,i] for i in range(a.shape[0])],:]\n",
-    "sorted_a.shape, sorted_a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "b.shape, b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b=tt.argsort(a[:,:,2])\n",
-    "\n",
-    "sorted_a=tt.stack([a[i,b[i],:] for i in range(a.shape[0])] )\n",
-    "sorted_a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = torch.as_tensor([[[1, 3, 7, 6], [9, 0, 6, 2], [3, 0, 5, 8]], [[1, 0, 1, 0], [2, 1, 0, 3], [0, 0, 6, 1]]])\n",
-    "\n",
-    "b=torch.argsort(a[:,:,2])\n",
-    "sorted_a=torch.stack([a[i,b[i],:] for i in range(a.shape[0])] )\n",
-    "sorted_a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "orted_dim = 1 # sort by rows, preserving each row\n",
-    "sorted_column = 2 # sort rows on value of 3rd column of each row\n",
-    "sorted_a = tt.as_tensor([[[3, 0, 5, 8], [9, 0, 6, 2], [1, 3, 7, 6]], [[2, 1, 0, 3], [1, 0, 1, 0], [0, 0, 6, 1]]])\n",
-    "sorted_a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# inbuilt \n",
     "import os\n",
@@ -275,100 +60,289 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import known"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class myMeta(type):\n",
+    "    def __new__(self, alias, bases, namespace):\n",
+    "        print(f'called new on {__class__}')\n",
+    "        print(f'{self=}')\n",
+    "        print(f'{alias=}')\n",
+    "        print(f'{bases=}')\n",
+    "        print(f'{namespace=}')\n",
+    "        return super().__new__(self, alias, bases, namespace)\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def __prepare__(self, alias, bases, **members):\n",
+    "        print(f'called prepare on {__class__}')\n",
+    "        print(f'{self=}')\n",
+    "        print(f'{alias=}')\n",
+    "        print(f'{bases=}')\n",
+    "        m = super().__prepare__(alias, bases, **members)\n",
+    "        print(f'mapping = {m}')\n",
+    "        return m\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "called prepare on <class '__main__.myMeta'>\n",
+      "self=<class '__main__.myMeta'>\n",
+      "alias='A'\n",
+      "bases=()\n",
+      "mapping = {}\n",
+      "called new on <class '__main__.myMeta'>\n",
+      "self=<class '__main__.myMeta'>\n",
+      "alias='A'\n",
+      "bases=()\n",
+      "namespace={'__module__': '__main__', '__qualname__': 'A', 'Ax': 3, 'Bx': 'Hi', '__init__': <function A.__init__ at 0x000001DDE6673A60>, 'foo': <function A.foo at 0x000001DD8D4150D0>}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A(metaclass = myMeta):\n",
+    "    Ax = 3\n",
+    "    Bx = 'Hi'\n",
+    "    def __init__(self) -> None:\n",
+    "        self.bar = self.foo\n",
+    "    \n",
+    "    def foo(self, x):\n",
+    "        return sum(range(x))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.A at 0x1dde6644730>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = A()\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def goo(x): return sum(range(x))\n",
+    "a.goo = goo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.goo(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ax \t\t: 3\n",
+      "Bx \t\t: Hi\n",
+      "bar \t\t: <bound method A.foo of <__main__.A object at 0x000001DDE6644730>>\n",
+      "foo \t\t: <bound method A.foo of <__main__.A object at 0x000001DDE6644730>>\n",
+      "goo \t\t: <function goo at 0x000001DD8D3DF160>\n"
+     ]
+    }
+   ],
+   "source": [
+    "known.Verbose.show(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.goo(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goo(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ax \t\t: 3\n",
+      "Bx \t\t: Hi\n",
+      "bar \t\t: <bound method A.foo of <__main__.A object at 0x000001DDE6644730>>\n",
+      "foo \t\t: <bound method A.foo of <__main__.A object at 0x000001DDE6644730>>\n",
+      "goo \t\t: <function goo at 0x000001DD8D3DF160>\n"
+     ]
+    }
+   ],
+   "source": [
+    "known.Verbose.show(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def goo(x): return sum(range(x-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.goo(x)>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L=[]\n",
+    "for _ in range(5):\n",
+    "    start = known.now()\n",
+    "    for i in range(20000): a.goo(i)\n",
+    "    end = known.now()\n",
+    "    te = end-start\n",
+    "    L.append(te)\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L=[]\n",
+    "for _ in range(5):\n",
+    "    start = known.now()\n",
+    "    for i in range(20000): a.foo(i)\n",
+    "    end = known.now()\n",
+    "    te = end-start\n",
+    "    L.append(te)\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L=[]\n",
+    "for _ in range(5):\n",
+    "    start = known.now()\n",
+    "    for i in range(20000): a.bar(i)\n",
+    "    end = known.now()\n",
+    "    te = end-start\n",
+    "    L.append(te)\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Any, Callable, Dict, List, Sequence, Set, Tuple, Union, "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir(typing)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(known.pdate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "known.ktorch."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tt.os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(12,6))\n",
-    "for px in [ 'first', 'last', 'mid', 'mean' ]:\n",
-    "    a = known.basic.graphfromimage('g1.png', pixel_choice=px)\n",
-    "    plt.plot(a)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = known.basic.graphfromimage('g1.png', pixel_choice='last')\n",
-    "plt.plot(a), a.shape, a.ndim, a.dtype#, a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = known.basic.graphfromimage('g1.png', pixel_choice='first')\n",
-    "plt.plot(a), a.shape, a.ndim, a.dtype#, a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = known.basic.graphfromimage('g1.png', pixel_choice='mid')\n",
-    "plt.plot(a), a.shape, a.ndim, a.dtype#, a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = known.basic.graphfromimage('g1.png', pixel_choice='mean')\n",
-    "plt.plot(a), a.shape, a.ndim, a.dtype#, a"
    ]
   }
  ],
