--- a/code/template.ipynb
+++ b/code/template.ipynb
@@ -32,6 +32,8 @@
     "\n",
     "# custom\n",
     "import known\n",
+    "from known.basic import pj\n",
+    "from known.basic.common import Verbose as verb\n",
     "import known.ktorch as kt\n",
     "\n",
     "print(f'{sys.version=}\\n{np.__version__=}\\n{tt.__version__=}\\n{known.__version__=}')"
@@ -40,7 +42,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "__venv310__",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -54,12 +56,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8fe6015140738806d41bf643a20b25ab509e1558f046cb4d7778c2b8bb5aa7b5"
+    "hash": "570feb405e2e27c949193ac68f46852414290d515b0ba6e5d90d076ed2284471"
    }
   }
  },
