--- a/code/template.ipynb
+++ b/code/template.ipynb
@@ -10,9 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.version='3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]'\n",
+      "np.__version__='1.22.2'\n",
+      "tt.__version__='1.10.1+cu102'\n",
+      "known.__version__='0.0.1'\n",
+      "Manual-Seed: 281703975047300\n"
+     ]
+    }
+   ],
    "source": [
     "# inbuilt \n",
     "import os\n",
@@ -26,6 +38,7 @@
     "# pytorch\n",
     "import torch as tt\n",
     "import torch.nn as nn\n",
+    "import torch.optim as oo\n",
     "import torch.functional as ff\n",
     "import torch.distributions as dd\n",
     "import torch.utils.data as ud\n",
@@ -36,8 +49,18 @@
     "from known.basic.common import Verbose as verb\n",
     "import known.ktorch as kt\n",
     "\n",
-    "print(f'{sys.version=}\\n{np.__version__=}\\n{tt.__version__=}\\n{known.__version__=}')"
+    "print(f'{sys.version=}\\n{np.__version__=}\\n{tt.__version__=}\\n{known.__version__=}')\n",
+    "\n",
+    "tt.manual_seed(281703975047300) # manually sets a seed for random sampling creation ops\n",
+    "print('Manual-Seed:', tt.initial_seed()) # current seed for default rng\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -56,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
