--- a/code/template.ipynb
+++ b/code/template.ipynb
@@ -54,13 +54,6 @@
     "tt.manual_seed(281703975047300) # manually sets a seed for random sampling creation ops\n",
     "print('Manual-Seed:', tt.initial_seed()) # current seed for default rng\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -79,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
